# wayfinder

./: .gitignore  AWBN-INTEGRATION-REVIEW.md  LICENSE  PIGFARM-RESEARCH-ROOM-STORYBOARD.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
flatpak/: cargo-sources.json  io.github.legendofzito.wayfinder.desktop  io.github.legendofzito.wayfinder.yml  node-sources.json
src-tauri/: Cargo.toml  io.github.legendofzito.wayfinder.metainfo.xml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
