[package]
name = "wayfinder"
version = "0.1.0"
description = "A fast, native file manager for Linux with a docked preview pane"
authors = ["LegendofZito"]
license = "LicenseRef-Proprietary"
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows.
name = "wayfinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

